force-app/main/default/objects/Insurance_Enrollment_Addon__c.object
<CustomObject>
    <label>Insurance Enrollment Add-on</label>
    <pluralLabel>Insurance Enrollment Add-ons</pluralLabel>

    <nameField>
        <label>Enrollment Add-on Name</label>
        <type>Text</type>
    </nameField>


    <!-- Add-ons are enrollment-linked (sensitive) -->
    <sharingModel>Private</sharingModel>

    <!-- Insurance_Enrollment__c (Lookup to Insurance_Enrollment__c) -->
    <fields>
        <fullName>Insurance_Enrollment__c</fullName>
        <label>Insurance Enrollment</label>
        <type>Lookup</type>
        <referenceTo>Insurance_Enrollment__c</referenceTo>
        <relationshipLabel>Enrollment Add-ons</relationshipLabel>
        <relationshipName>EnrollmentAddons</relationshipName>
        <required>true</required>
    </fields>

    <!-- Insurance_Addon__c (Lookup to master Add-on catalog) -->
    <fields>
        <fullName>Insurance_Addon__c</fullName>
        <label>Insurance Add-on</label>
        <type>Lookup</type>
        <referenceTo>Insurance_Addon__c</referenceTo>
        <relationshipLabel>Enrollment Add-ons</relationshipLabel>
        <relationshipName>EnrollmentAddons</relationshipName>
        <required>true</required>
    </fields>

    <!-- Quantity__c -->
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <type>Number</type>
        <precision>6</precision>
        <scale>0</scale>
    </fields>

    <!-- Monthly_Premium__c (snapshot at time of enrollment) -->
    <fields>
        <fullName>Monthly_Premium__c</fullName>
        <label>Monthly Premium</label>
        <type>Currency</type>
        <precision>18</precision>
        <scale>2</scale>
    </fields>

    <!-- Is_Active__c -->
    <fields>
        <fullName>Is_Active__c</fullName>
        <label>Is Active</label>
        <type>Checkbox</type>
        <defaultValue>true</defaultValue>
    </fields>

    <!-- Effective / End dates (optional overrides per add-on) -->
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>

    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>

    <!-- Notes__c -->
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>

</CustomObject>